added parts of Kippo documentation

--- a/Dokumentation/Dokumentation/00_Dokumentation.tex
+++ b/Dokumentation/Dokumentation/00_Dokumentation.tex
@@ -86,6 +86,8 @@
   %commentstyle=\itshape\color{purple!40!black},
 }
 
+\lstset{aboveskip=15pt,belowskip=15pt}
+
 
 % ============= Dokumentbeginn =============
 
