--- a/Dokumentation/Dokumentation/00_Dokumentation.tex
+++ b/Dokumentation/Dokumentation/00_Dokumentation.tex
@@ -1,5 +1,4 @@
 %Dokumentklasse
-%\documentclass[a4paper,12pt]{scrreprt}
 \documentclass[a4paper,12pt,oneside,pointlessnumbers]{scrbook}
 \usepackage[left= 2.5cm,right = 2cm, bottom = 4 cm]{geometry}
 %\usepackage[onehalfspacing]{setspace}
@@ -39,7 +38,7 @@
 
 
 %nicht einrücken nach Absatz
-%\setlength{\parindent}{0pt}
+\setlength{\parindent}{0pt}
 
 
 % ============= Kopf- und Fußzeile =============
